finish setting up sass environment + html homepage

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
-
 @import './utils/variables';
-@import './base/test';
+@import 'base/base';
+@import "components/buttons";
+@import './pages/index';
+@import "./layout/nav";
