--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,8 @@
-$red : green;
-
 $font-primary : 'Roboto';
 
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
-$color-tertiary: #99E2D0;
+$color-tertiary: #8dd0bf;
+$light-gray: rgb(246, 245, 245);
+$dark-gray: rgb(224, 223, 223);
+$gradient: rgba(201, 39, 180, 0.76)
