--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,7 +1,21 @@
 .localisation {
   display: flex;
   justify-content: center;
-  background-color: rgb(51, 201, 12);
+  background-color: $dark-gray;
   font-size: 1.3rem;
-  position: relative;
+  border-top: $light-gray;
+  border-top-style: solid;
+  padding: 5px;
+}
+
+.tuto{
+  .tuto_step {
+    padding: 1.5rem;
+    margin: 1.5rem 0 1rem 0.75rem;
+    box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.125);
+    border-radius: 1.25rem;
+    background-color: #f6f6f6;
+    display: flex;
+    position: relative;
+  }
 }
