Fix footer design & other index elements: header, buttons and cards

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,10 @@
 @import 'base/base';
 @import 'base/typography';
 @import "components/buttons";
+@import "utils/mixins";
 @import "layout/footer";
 @import "layout/header";
 @import "layout/nav";
 @import "layout/cards";
+@import "layout/menu";
 @import './pages/index';
