--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,4 +5,4 @@ $color-secondary: #FF79DA;
 $color-tertiary: #8dd0bf;
 $light-gray: rgb(246, 245, 245);
 $dark-gray: rgb(224, 223, 223);
-$gradient: rgba(201, 39, 180, 0.76)
+$gradient: rgba(201, 39, 180, 0.76);
