--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,32 +3,75 @@ body, html {
   font-family: "Roboto", sans-serif;
 }
 
+main {
+  padding: 2rem;
+}
+
 h1 {
   font-size: 1.5rem;
 }
 
-header .hero button {
+.hero button {
   background-color: rgba(201, 39, 180, 0.76);
   color: white;
   padding: 1rem;
   border-radius: 4rem;
-  align-items: center;
 }
 
-footer {
+.card_footer {
   padding: 1rem;
   position: relative;
   display: flex;
   align-items: center;
 }
 
+.footer {
+  background-color: #353535;
+}
+.footer .container {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+.footer_logo {
+  color: white;
+  font-family: "Shrikhand", "cursive";
+  margin: 0;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+.footer_list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.footer_listElement {
+  margin: 0.5rem 0;
+}
+.footer_link {
+  color: white;
+  text-decoration: none;
+}
+.footer_link:hover {
+  text-decoration: underline;
+}
+.footer_icon {
+  width: 1.2rem;
+  margin-right: 0.5rem;
+}
+
 header {
+  text-align: center;
   background-color: rgb(246, 245, 245);
 }
-header #logo-omf {
-  text-align: center;
+header .logo img {
   background-color: white;
   font-size: 1rem;
+  max-width: 50%;
+  max-height: 32rem;
+  width: 100%;
+  object-fit: cover;
 }
 header h1 {
   text-align: center;
@@ -72,6 +115,58 @@ header p {
   top: 1rem;
   right: 0.75rem;
 }
+.card .card_footer {
+  justify-content: space-between;
+}
+
+.main__menu {
+  background-color: #f6f6f6;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  width: 100%;
+  position: relative;
+  margin-top: -50px;
+}
+
+.menu__title {
+  font-family: Shrikhand, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.menu__title {
+  font-family: Shrikhand, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.meals {
+  background-color: #fff;
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 4px 4px 6px #aaa;
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: padding-right 450ms ease-in-out;
+}
+.meals:hover {
+  padding-right: 75px;
+}
+.meals:hover .cross {
+  opacity: 1;
+  transform: translate(-50px);
+}
+.meals:hover .fa-check-circle {
+  transform: rotate(360deg);
+}
 
 .localisation {
   display: flex;
@@ -80,7 +175,11 @@ header p {
   font-size: 1.3rem;
   border-top: rgb(246, 245, 245);
   border-top-style: solid;
-  padding: 5px;
+}
+
+.hero {
+  text-align: center;
+  background-color: rgb(246, 245, 245);
 }
 
 .tuto .tuto_step {
@@ -89,8 +188,6 @@ header p {
   box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.125);
   border-radius: 1.25rem;
   background-color: #f6f6f6;
-  display: flex;
-  position: relative;
 }
 
 /*# sourceMappingURL=style.css.map */
