--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,49 @@
-footer {
+.card_footer {
   padding: 1rem;
   position: relative;
   display: flex;
   align-items: center;
+}
+
+.footer {
+  background-color: #353535;
+
+  .container {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  &_logo {
+    color: white;
+    font-family: "Shrikhand", "cursive";
+    margin: 0;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+  }
+
+  &_list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  &_listElement {
+    margin: 0.5rem 0;
+  }
+
+  &_link {
+    color: white;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &_icon {
+    width: 1.2rem;
+    margin-right: 0.5rem;
+  }
 }
