--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,14 @@
 header {
+  text-align: center;
 
-  #logo-omf {
-    text-align: center;
+  .logo img {
     background-color: white;
     font-size: 1rem;
+    max-width: 50%;
+    max-height: 32rem;
+    width: 100%;
+    object-fit: cover;
+
   }
 
   background-color: $light-gray;
