Add a la francaise menu and fix footer logo

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,6 +1,17 @@
-.hero button {
-  background-color: $gradient;
+button {
+  background-image: $bg-button;
   color: white;
   padding: 1rem;
+  padding-inline: 4rem;
   border-radius: 4rem;
+  font-weight: bold;
+  cursor: pointer;
 }
+
+  .btn_order {
+    display: flex;
+    justify-content: center;
+    padding: 3rem;
+    width: auto;
+    }
+
