--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,19 +3,29 @@ body, html {
   font-family: "Roboto", sans-serif;
 }
 
-main {
-  padding: 2rem;
+h3 {
+  padding: 1rem;
 }
 
 h1 {
   font-size: 1.5rem;
 }
 
-.hero button {
-  background-color: rgba(201, 39, 180, 0.76);
+button {
+  background-image: linear-gradient(to top, rgba(96, 37, 197, 0.93), 10%, rgba(247, 128, 252, 0.82));
   color: white;
   padding: 1rem;
+  padding-inline: 4rem;
   border-radius: 4rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.btn_order {
+  display: flex;
+  justify-content: center;
+  padding: 3rem;
+  width: auto;
 }
 
 .card_footer {
@@ -29,17 +39,15 @@ h1 {
   background-color: #353535;
 }
 .footer .container {
-  margin: 1rem;
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 2rem;
 }
 .footer_logo {
+  object-fit: scale-down;
+}
+.footer_logo img {
   color: white;
-  font-family: "Shrikhand", "cursive";
-  margin: 0;
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
 }
 .footer_list {
   list-style: none;
@@ -119,7 +127,13 @@ header p {
   justify-content: space-between;
 }
 
-.main__menu {
+.menu_header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.main_menu {
   background-color: #f6f6f6;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
@@ -128,15 +142,7 @@ header p {
   margin-top: -50px;
 }
 
-.menu__title {
-  font-family: Shrikhand, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-
-.menu__title {
+.menu_title {
   font-family: Shrikhand, sans-serif;
   display: flex;
   justify-content: space-between;
@@ -166,6 +172,100 @@ header p {
 }
 .meals:hover .fa-check-circle {
   transform: rotate(360deg);
+}
+
+.cross {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8dd0bf;
+  width: 50px;
+  height: 63px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  position: absolute;
+  padding: 20px;
+  right: -50px;
+  top: 0;
+  opacity: 0;
+  transition: transform 330ms ease-in-out;
+}
+.cross .fa-check-circle {
+  color: #fff;
+  transition: transform 500ms ease-in-out;
+}
+
+.menu_header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header_img img {
+  object-fit: fill;
+  width: 100%;
+  height: 250px;
+}
+
+.main_menu {
+  background-color: #f6f6f6;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  width: 100%;
+  position: relative;
+  margin-top: -50px;
+}
+
+.menu_title {
+  font-family: Shrikhand, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.meals {
+  background-color: #fff;
+  border-radius: 15px;
+  margin: 10px;
+  padding-bottom: 5px;
+  box-shadow: 4px 4px 6px #aaa;
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: padding-right 450ms ease-in-out;
+}
+.meals:hover {
+  padding-right: 7rem;
+}
+.meals:hover .cross {
+  opacity: 1;
+  transform: translate(-50px);
+}
+.meals:hover .fa-check-circle {
+  transform: rotate(360deg);
+}
+
+.last_line {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cross {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8dd0bf;
+  width: 50px;
+  height: 100%;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  position: absolute;
+  padding: 20px;
+  right: -50px;
+  top: 0;
 }
 
 .localisation {
