--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,15 +1,70 @@
-.main__menu {
-  @include main-menu;
+
+.menu_header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.menu__title {
-  @include menu-title;
+.header_img img{
+  object-fit: fill;
+  width: 100%;
+  height: 250px;
 }
-
-.menu__title {
-  @include menu-title;
+.main_menu {
+  background-color: #f6f6f6;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  width: 100%;
+  position: relative;
+  margin-top: -50px;
 }
-
+.menu_title {
+  font-family: Shrikhand, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
 .meals {
-  @include meals;
+  background-color: #fff;
+  border-radius: 15px;
+  margin: 10px;
+  padding-bottom: 5px;
+  box-shadow: 4px 4px 6px #aaa;
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: padding-right 450ms ease-in-out;
+  &:hover {
+    padding-right: 7rem;
+  }
+  &:hover .cross {
+    opacity: 1;
+    transform: translate(-50px);
+  }
+  &:hover .fa-check-circle {
+    transform: rotate(360deg) ;
+  }
 }
+
+.last_line {
+  display: flex;
+  justify-content: space-between;
+}
+.cross {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $color-tertiary;
+  width: 50px;
+  height: 100%;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  position: absolute;
+  padding: 20px;
+  right: -50px;
+  top: 0;
+  }
+
