fix header and header logo menu + index

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,11 @@
 header {
   text-align: center;
 
+  .logo {
+    background-color: white;
+    padding: 5px;
+  }
+
   .logo img {
     background-color: white;
     font-size: 1rem;
@@ -8,7 +13,6 @@ header {
     max-height: 32rem;
     width: 100%;
     object-fit: cover;
-
   }
 
   background-color: $light-gray;
@@ -24,5 +28,6 @@ header {
     margin: 1rem 1.5rem;
   }
 }
+
 
 
