--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 button {
-  background-image: linear-gradient(to top, rgba(96, 37, 197, 0.93), 10%, rgba(247, 128, 252, 0.82));
+  background-image: linear-gradient(to top, rgba(96, 37, 197, 0.93), 15%, rgba(247, 128, 252, 0.82));
   color: white;
   padding: 1rem;
   padding-inline: 4rem;
@@ -72,6 +72,10 @@ button {
 header {
   text-align: center;
   background-color: rgb(246, 245, 245);
+}
+header .logo {
+  background-color: white;
+  padding: 5px;
 }
 header .logo img {
   background-color: white;
@@ -199,10 +203,16 @@ header p {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: white;
+}
+.menu_header .arrow {
+  font-size: 20px;
+  margin: 1rem;
 }
 
 .header_img img {
-  object-fit: fill;
+  object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 250px;
 }
