--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -3,13 +3,24 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: white;
+
+  .arrow {
+    font-size: 20px;
+    margin: 1rem;
+  }
 }
 
+
+
 .header_img img{
-  object-fit: fill;
+  object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 250px;
 }
+
+
 .main_menu {
   background-color: #f6f6f6;
   border-top-left-radius: 25px;
