Add menus font + fix linear gradient + fix  home page cards

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,11 +1,11 @@
 button {
   background-image: $bg-button;
   color: white;
-  padding: 1rem;
   padding-inline: 4rem;
   border-radius: 4rem;
   font-weight: bold;
   cursor: pointer;
+  padding: 20px 30px;
 }
 
   .btn_order {
