--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,14 @@ body, html {
   font-family: "Roboto", sans-serif;
 }
 
+.main_index {
+  margin: 20px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
 h3 {
   padding: 1rem;
 }
@@ -12,13 +20,13 @@ h1 {
 }
 
 button {
-  background-image: linear-gradient(to top, rgba(96, 37, 197, 0.93), 15%, rgba(247, 128, 252, 0.82));
+  background-image: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
   color: white;
-  padding: 1rem;
   padding-inline: 4rem;
   border-radius: 4rem;
   font-weight: bold;
   cursor: pointer;
+  padding: 20px 30px;
 }
 
 .btn_order {
@@ -97,8 +105,6 @@ header p {
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  column-gap: 2rem;
   row-gap: 2rem;
 }
 
@@ -106,14 +112,15 @@ header p {
   background-color: white;
   border-radius: 1rem;
   position: relative;
+  box-shadow: 2px 2px 5px #aaa;
   text-decoration: none;
   color: inherit;
   display: block;
 }
 .card .card_img {
-  height: 12rem;
+  height: 10rem;
   width: 100%;
-  border: transparent solid 0px;
+  border: transparent solid 0;
   border-radius: 1rem 1rem 0 0;
   box-shadow: none;
   object-fit: cover;
@@ -129,74 +136,6 @@ header p {
 }
 .card .card_footer {
   justify-content: space-between;
-}
-
-.menu_header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.main_menu {
-  background-color: #f6f6f6;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  width: 100%;
-  position: relative;
-  margin-top: -50px;
-}
-
-.menu_title {
-  font-family: Shrikhand, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-
-.meals {
-  background-color: #fff;
-  border-radius: 15px;
-  margin: 10px;
-  padding: 10px;
-  box-shadow: 4px 4px 6px #aaa;
-  position: relative;
-  cursor: pointer;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  transition: padding-right 450ms ease-in-out;
-}
-.meals:hover {
-  padding-right: 75px;
-}
-.meals:hover .cross {
-  opacity: 1;
-  transform: translate(-50px);
-}
-.meals:hover .fa-check-circle {
-  transform: rotate(360deg);
-}
-
-.cross {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #8dd0bf;
-  width: 50px;
-  height: 63px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  position: absolute;
-  padding: 20px;
-  right: -50px;
-  top: 0;
-  opacity: 0;
-  transition: transform 330ms ease-in-out;
-}
-.cross .fa-check-circle {
-  color: #fff;
-  transition: transform 500ms ease-in-out;
 }
 
 .menu_header {
@@ -227,7 +166,8 @@ header p {
 }
 
 .menu_title {
-  font-family: Shrikhand, sans-serif;
+  font-family: "Shrikhand", "cursive";
+  font-weight: lighter;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -238,7 +178,7 @@ header p {
   background-color: #fff;
   border-radius: 15px;
   margin: 10px;
-  padding-bottom: 5px;
+  padding: 10px;
   box-shadow: 4px 4px 6px #aaa;
   position: relative;
   cursor: pointer;
@@ -269,13 +209,19 @@ header p {
   align-items: center;
   background-color: #8dd0bf;
   width: 50px;
-  height: 100%;
+  height: 90px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   position: absolute;
   padding: 20px;
   right: -50px;
   top: 0;
+  opacity: 0;
+  transition: transform 330ms ease-in-out;
+}
+.cross .fa-check-circle {
+  color: #fff;
+  transition: transform 500ms ease-in-out;
 }
 
 .localisation {
@@ -285,11 +231,14 @@ header p {
   font-size: 1.3rem;
   border-top: rgb(246, 245, 245);
   border-top-style: solid;
+  padding: 11px;
 }
 
 .hero {
   text-align: center;
   background-color: rgb(246, 245, 245);
+  padding: 2rem;
+  padding-bottom: 3rem;
 }
 
 .tuto .tuto_step {
