--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,14 @@ body, html {
   font-family: 'Roboto', sans-serif;
 }
 
+.main_index {
+  margin: 20px
+}
+
+h2 {
+ font-size: 20px;
+}
+
 h3 {
   padding: 1rem;
 }
