--- a/sass/layout/_cards.scss
+++ b/sass/layout/_cards.scss
@@ -1,7 +1,5 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  column-gap: 2rem;
   row-gap: 2rem;
 }
 
@@ -9,14 +7,15 @@
   background-color: white;
   border-radius: 1rem;
   position: relative;
+  box-shadow: 2px 2px 5px #aaa;
   text-decoration: none;
   color: inherit;
   display: block;
 
   .card_img {
-    height: 12rem;
+    height: 10rem;
     width: 100%;
-    border: transparent solid 0px;
+    border: transparent solid 0;
     border-radius: 1rem 1rem 0 0;
     box-shadow: none;
     object-fit: cover;
@@ -37,71 +36,3 @@
   }
 }
 
-
-/////////
-
-
-.menu_header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.main_menu {
-  background-color: #f6f6f6;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  width: 100%;
-  position: relative;
-  margin-top: -50px;
-}
-.menu_title {
-  font-family: Shrikhand, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-.meals {
-  background-color: #fff;
-  border-radius: 15px;
-  margin: 10px;
-  padding: 10px;
-  box-shadow: 4px 4px 6px #aaa;
-  position: relative;
-  cursor: pointer;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  transition: padding-right 450ms ease-in-out;
-  &:hover {
-    padding-right: 75px;
-  }
-  &:hover .cross {
-    opacity: 1;
-    transform: translate(-50px);
-  }
-  &:hover .fa-check-circle {
-    transform: rotate(360deg) ;
-  }
-}
-
-.cross {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: $color-tertiary;
-  width: 50px;
-  height: 63px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  position: absolute;
-  padding: 20px;
-  right: -50px;
-  top: 0;
-  opacity: 0;
-  transition: transform 330ms ease-in-out;
-  & .fa-check-circle {
-    color: #fff;
-    transition: transform 500ms ease-in-out;
-  }
-}
