--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -11,8 +11,6 @@
   }
 }
 
-
-
 .header_img img{
   object-fit: cover;
   object-position: center;
@@ -29,8 +27,10 @@
   position: relative;
   margin-top: -50px;
 }
+
 .menu_title {
-  font-family: Shrikhand, sans-serif;
+  font-family: "Shrikhand", "cursive";
+  font-weight: lighter;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,7 +40,7 @@
   background-color: #fff;
   border-radius: 15px;
   margin: 10px;
-  padding-bottom: 5px;
+  padding: 10px;
   box-shadow: 4px 4px 6px #aaa;
   position: relative;
   cursor: pointer;
@@ -70,12 +70,17 @@
   align-items: center;
   background-color: $color-tertiary;
   width: 50px;
-  height: 100%;
+  height: 90px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   position: absolute;
   padding: 20px;
   right: -50px;
   top: 0;
+  opacity: 0;
+  transition: transform 330ms ease-in-out;
+  & .fa-check-circle {
+    color: #fff;
+    transition: transform 500ms ease-in-out;
   }
-
+}
