--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -5,11 +5,14 @@
   font-size: 1.3rem;
   border-top: $light-gray;
   border-top-style: solid;
+  padding: 11px;
 }
 
 .hero {
   text-align: center;
   background-color: $light-gray;
+  padding: 2rem;
+  padding-bottom: 3rem;
 }
 
 
