--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -17,11 +17,39 @@
 
 
 .tuto {
-  .tuto_step {
+
+  &_step {
     padding: 1.5rem;
-    margin: 1.5rem 0 1rem 0.75rem;
+    margin: 1rem 0 1rem 0.75rem;
     box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.125);
     border-radius: 1.25rem;
     background-color: #f6f6f6;
+    display: flex;
+    position: relative;
+  }
+
+  &_step_number {
+    z-index: 1;
+    background-color: $color-primary;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: absolute;
+    left: -0.75rem;
+  }
+
+  &_step_content {
+    font-weight: bold;
+    .tuto_icon {
+      margin-right: 3rem;
+      margin-left: 2rem;
+      color: #7e7e7e;
+      font-size: 20px;
+    }
   }
 }
+
