Add hover to homepage steps

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,10 +23,16 @@ button {
   background-image: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
   color: white;
   padding-inline: 4rem;
-  border-radius: 4rem;
-  font-weight: bold;
+  border-radius: 100px;
   cursor: pointer;
-  padding: 20px 30px;
+  padding: 20px 45px;
+  border: 0;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+button:hover {
+  background-color: white;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
 }
 
 .btn_order {
@@ -126,8 +132,8 @@ header p {
   object-fit: cover;
 }
 .card .card_badge {
-  background-color: #8dd0bf;
-  color: #8dd0bf, 50%;
+  background-color: #99E2D0;
+  color: #99E2D0, 50%;
   padding: 0.5rem;
   border-radius: 0.125rem;
   position: absolute;
@@ -164,7 +170,7 @@ header p {
 .card .fa-heart::before {
   opacity: 0;
   background: linear-gradient(#9356DC, #FF79DA);
-  background-clip: text;
+  #background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transition: opacity 400ms ease-out;
@@ -207,6 +213,15 @@ header p {
   padding: 10px;
 }
 
+.line {
+  border-style: solid;
+  border-color: #99E2D0;
+  width: 10%;
+  margin-left: 1rem;
+  position: relative;
+  bottom: 2rem;
+}
+
 .meals {
   background-color: #fff;
   border-radius: 15px;
@@ -245,7 +260,7 @@ header p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #8dd0bf;
+  background-color: #99E2D0;
   width: 90px;
   height: 100%;
   border-top-right-radius: 15px;
@@ -265,10 +280,16 @@ header p {
   display: flex;
   justify-content: center;
   background-color: rgb(224, 223, 223);
-  font-size: 1.3rem;
+  font-size: 1.1rem;
+  font-weight: 400;
   border-top: rgb(246, 245, 245);
   border-top-style: solid;
   padding: 11px;
+  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.125);
+}
+.localisation i {
+  position: relative;
+  right: 25px;
 }
 
 .hero {
@@ -286,6 +307,22 @@ header p {
   background-color: #f6f6f6;
   display: flex;
   position: relative;
+  cursor: pointer;
+}
+.tuto_step:hover {
+  background-color: #E5CDEE;
+}
+.tuto_step:hover i {
+  color: #9356DC;
+}
+.tuto_step_content {
+  font-weight: 500;
+}
+.tuto_step_content .tuto_icon {
+  margin-right: 3rem;
+  margin-left: 2rem;
+  color: #7e7e7e;
+  font-size: 20px;
 }
 .tuto_step_number {
   z-index: 1;
@@ -299,15 +336,6 @@ header p {
   color: white;
   position: absolute;
   left: -0.75rem;
-}
-.tuto_step_content {
-  font-weight: bold;
-}
-.tuto_step_content .tuto_icon {
-  margin-right: 3rem;
-  margin-left: 2rem;
-  color: #7e7e7e;
-  font-size: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
