--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -36,6 +36,15 @@
   padding: 10px;
 }
 
+.line {
+  border-style: solid;
+  border-color: #99E2D0;
+  width: 10%;
+  margin-left: 1rem;
+  position: relative;
+  bottom: 2rem;
+}
+
 .meals {
   background-color: #fff;
   border-radius: 15px;
