--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,12 +1,21 @@
 button {
-  background-image: $bg-button;
-  color: white;
-  padding-inline: 4rem;
-  border-radius: 4rem;
-  font-weight: bold;
-  cursor: pointer;
-  padding: 20px 30px;
+    background-image: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
+    color: white;
+    padding-inline: 4rem;
+    border-radius: 100px;
+    cursor: pointer;
+    padding: 20px 45px;
+    border: 0;
+    font-size: 1.1rem;
+    font-weight: 500;
+
+
+  &:hover {
+    background-color: white;
+    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.50);
+  }
 }
+
 
 .btn_order {
   display: flex;
