--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,7 @@ header {
   .logo {
     background-color: white;
     padding: 5px;
+    text-align: center;
   }
 
   .logo img {
@@ -11,7 +12,7 @@ header {
     font-size: 1rem;
     max-width: 50%;
     max-height: 32rem;
-    width: 100%;
+    #width: 100%;
     object-fit: cover;
   }
 
