--- a/sass/layout/_cards.scss
+++ b/sass/layout/_cards.scss
@@ -1,6 +1,12 @@
 .cards {
   display: grid;
   row-gap: 2rem;
+
+  @media (min-width:64rem) {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+
 }
 
 .card {
