--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,12 +1,13 @@
 .menu_header {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
   background-color: white;
 
   .arrow {
     font-size: 20px;
     margin: 1rem;
+    left: 3rem;
+    position: absolute;
   }
 }
 
@@ -27,6 +28,18 @@
   margin-top: -50px;
 }
 
+.starter {
+  animation: menuAppearance 1s ease-in-out;
+}
+
+.dish_title {
+  animation: menuAppearance 1.1s ease-in-out;
+}
+
+.meals {
+  animation: menuAppearance 1.2s ease-in-out;
+}
+
 .menu_title {
   font-family: "Shrikhand", "cursive";
   font-weight: lighter;
@@ -44,6 +57,16 @@
   position: relative;
   bottom: 2rem;
 }
+
+.full_menu {
+  display: grid;
+
+  @media (min-width:64rem) {
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 1rem;
+  }
+}
+
 
 .meals {
   background-color: #fff;
