--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import 'base/animation';
 @import 'base/base';
 @import 'base/typography';
 @import "components/buttons";
