--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,13 +20,14 @@ header {
 
   h1 {
     text-align: center;
+    font-size: 25px;
   }
 
   p {
     text-align: center;
     font-size: 1rem;
     font-weight: lighter;
-    margin: 1rem 1.5rem;
+    padding-bottom: 5px;
   }
 }
 
