--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,30 +1,3 @@
-.loader {
-  background-color: rgba(255, 255, 255, 0.90);
-  z-index: 10;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.loader:after {
-  content: " ";
-  display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border-radius: 50%;
-  border: 6px solid;
-  border-color: $color-primary transparent $color-secondary transparent;
-  animation: loader 1s ease-in-out 3s forwards;
-}
-
-
 .localisation {
   display: flex;
   justify-content: center;
@@ -58,12 +31,12 @@
     }
 
   &_step {
-    padding: 1.5rem;
+    padding: 1.4rem;
     margin: 1rem 0 1rem 0.75rem;
     box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.125);
     border-radius: 1.25rem;
     background-color: #f6f6f6;
-    display: flex;
+
     position: relative;
     cursor: pointer;
 
@@ -77,16 +50,14 @@
     }
   }
 
-  &_step_content {
-    font-weight: 500;
-
     .tuto_icon {
-      margin-right: 3rem;
-      margin-left: 2rem;
+      margin-right: 1rem;
+      margin-left: 1rem;
       color: #7e7e7e;
-      font-size: 20px;
     }
 
+  &_step_content {
+    font-weight: 500;
   }
 
   &_step_number {
@@ -102,7 +73,19 @@
     position: absolute;
     left: -0.75rem;
   }
-
-
 }
 
+.tuto_container{
+  margin: 20px;
+  padding-top: 15px;
+  padding-bottom: 25px;
+}
+
+.restaurants {
+  background-color: $light-gray;
+  padding-top: 3rem;
+}
+.restaurants .container{
+  margin: 20px;
+
+}
