--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -1,23 +1,70 @@
-@keyframes loader {
+@keyframes menuAppearance {
+  from {
+    transform: translateY(100%);
+    opacity: 0.5;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.loader {
+  color: red;
+  display:flex;
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+  justify-content: center;
+  align-items: center;
+  position :fixed;
+  animation-fill-mode: forwards;
+}
+
+.loader div {
+  animation: lds-spinner 1.2s linear;
+  animation-fill-mode: backwards;
+  animation-iteration-count: 1;
+}
+
+.loader div:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: red transparent blue transparent;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+
+@keyframes lds-spinner {
   0% {
     opacity: 1;
     transform: rotate(0deg);
 
   }
   100% {
-    transform: rotate(360deg);
     opacity: 0;
+    transform: rotate(360deg);
   }
 }
 
+header, main, footer {
+  opacity: 0;
+  animation: corps 1s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+}
 
-@keyframes menuAppearance {
-  from {
-    transform: translateY(100%) ;
-    opacity: 0.5;
+@keyframes corps {
+  0% {
+    opacity: 0;
   }
-  to {
-    transform: translateY(0) ;
+  100% {
     opacity: 1;
   }
 }
