--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,13 +1,13 @@
 button {
-    background-image: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
-    color: white;
-    padding-inline: 4rem;
-    border-radius: 100px;
-    cursor: pointer;
-    padding: 20px 45px;
-    border: 0;
-    font-size: 1.1rem;
-    font-weight: 500;
+  background-image: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
+  color: white;
+  padding-inline: 4rem;
+  border-radius: 100px;
+  cursor: pointer;
+  padding: 13px 20px;
+  border: 0;
+  font-size: 13px;
+  font-weight: 500;
 
 
   &:hover {
