--- a/sass/layout/_cards.scss
+++ b/sass/layout/_cards.scss
@@ -6,7 +6,6 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
   }
-
 }
 
 .card {
@@ -40,45 +39,46 @@
   .card_footer {
     justify-content: space-between;
   }
-
-  // HEART
-  .fa-heart {
-    position: relative;
-  }
-
-  .fa-heart:hover {
-    transition: opacity 200ms ease-in-out;
-  }
-
-  .fa-heart:hover::after {
-    opacity: 0;
-  }
-
-  .fa-heart:hover::before {
-    opacity: 1;
-  }
-
-  .fa-heart::after {
-    opacity: 1;
-    font-weight: 100;
-    align-self: center;
-    transition: opacity 400ms ease-in;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: ""
-  }
-
-  .fa-heart::before {
-    opacity: 0;
-    background: linear-gradient(#9356DC, #FF79DA);
-    #background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: opacity 400ms ease-out;
-    font-weight: 600;
-  }
 }
+
+  .card_like {
+    .fa-heart {
+      position: relative;
+    }
+
+    .fa-heart:hover {
+      transition: opacity 200ms ease-in-out;
+    }
+
+    .fa-heart:hover::after {
+      opacity: 0;
+    }
+
+    .fa-heart:hover::before {
+      opacity: 1;
+    }
+
+    .fa-heart::after {
+      opacity: 1;
+      font-weight: 100;
+      align-self: center;
+      transition: opacity 400ms ease-in;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      content: ""
+    }
+
+    .fa-heart::before {
+      opacity: 0;
+      background: linear-gradient(#9356DC, #FF79DA);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transition: opacity 400ms ease-out;
+      font-weight: 600;
+    }
+  }
+
 
