--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -6,8 +6,11 @@
   .arrow {
     font-size: 20px;
     margin: 1rem;
-    left: 3rem;
-    position: absolute;
+
+  }
+
+  :visited{
+    color: black;
   }
 }
 
@@ -47,6 +50,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  margin: 10px;
 }
 
 .line {
@@ -77,8 +81,6 @@
   position: relative;
   cursor: pointer;
   white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
   transition: padding-right 450ms ease-in-out;
 
   &:hover {
@@ -101,8 +103,8 @@
 
   p {
     margin: 0;
-    text-overflow: ellipsis;
     overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
