--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,59 +9,62 @@
   }
 }
 .loader {
-  color: red;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  justify-content: center;
-  align-items: center;
   position: fixed;
-  animation-fill-mode: forwards;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  animation: loader 0.01s;
+  animation-delay: 1.75s;
+  animation-fill-mode: both;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-.loader div {
-  animation: lds-spinner 1.2s linear;
-  animation-fill-mode: backwards;
+.loader_item {
+  height: 1rem;
+  width: 1rem;
+  border-radius: 1rem;
+  animation: jump 1s;
   animation-iteration-count: 1;
 }
-
-.loader div:after {
-  content: " ";
-  display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border-radius: 50%;
-  border: 6px solid #fff;
-  border-color: red transparent blue transparent;
-  animation: lds-spinner 1.2s linear infinite;
+.loader_itemContainer {
+  display: flex;
+  width: 5rem;
+  justify-content: space-between;
+}
+.loader_item_1 {
+  background-color: #9356DC;
+}
+.loader_item_2 {
+  background-color: #FF79DA;
+  animation-delay: 0.25s;
+}
+.loader_item_3 {
+  background-color: #99E2D0;
+  animation-delay: 0.5s;
 }
 
-@keyframes lds-spinner {
-  0% {
-    opacity: 1;
-    transform: rotate(0deg);
-  }
+@keyframes loader {
   100% {
     opacity: 0;
-    transform: rotate(360deg);
+    z-index: -10;
   }
 }
-header, main, footer {
-  opacity: 0;
-  animation: corps 1s;
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes corps {
+@keyframes jump {
   0% {
-    opacity: 0;
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0.5rem);
+  }
+  75% {
+    transform: translateY(-0.5rem);
   }
   100% {
-    opacity: 1;
+    transform: translateY(0);
   }
 }
 .localisation {
@@ -87,13 +90,19 @@ header, main, footer {
   padding-bottom: 3rem;
 }
 
+.tuto {
+  margin: 20px;
+  padding-top: 15px;
+  padding-bottom: 25px;
+}
 @media (min-width: 64rem) {
-  .tuto {
+  .tuto_steps {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
   }
 }
+
 .tuto_step {
   padding: 1.4rem;
   margin: 1rem 0 1rem 0.75rem;
@@ -109,14 +118,17 @@ header, main, footer {
 .tuto_step:hover i {
   color: #9356DC;
 }
-.tuto .tuto_icon {
+
+.tuto_step_icon {
   margin-right: 1rem;
   margin-left: 1rem;
   color: #7e7e7e;
 }
+
 .tuto_step_content {
   font-weight: 500;
 }
+
 .tuto_step_number {
   z-index: 1;
   background-color: #9356DC;
@@ -129,12 +141,6 @@ header, main, footer {
   color: white;
   position: absolute;
   left: -0.75rem;
-}
-
-.tuto_container {
-  margin: 20px;
-  padding-top: 15px;
-  padding-bottom: 25px;
 }
 
 .restaurants {
@@ -161,6 +167,10 @@ h2 {
 
 h3 {
   padding: 1rem;
+}
+
+h4 {
+  font-weight: 600;
 }
 
 button {
@@ -233,7 +243,7 @@ header {
 }
 header .logo {
   background-color: white;
-  padding: 5px;
+  padding: 15px;
   text-align: center;
 }
 header .logo img {
@@ -335,8 +345,10 @@ header p {
   background-color: white;
 }
 .menu_header .arrow {
-  font-size: 20px;
-  margin: 1rem;
+  font-size: 17px;
+  margin: 20px;
+  position: absolute;
+  left: 10px;
 }
 .menu_header :visited {
   color: black;
@@ -376,7 +388,7 @@ header p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 0 1rem;
   margin: 10px;
 }
 
@@ -399,10 +411,16 @@ header p {
   }
 }
 
+.submenu {
+  max-width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
+}
+
 .meals {
   background-color: #fff;
   border-radius: 15px;
-  margin: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   box-shadow: 4px 4px 6px #aaa;
   position: relative;
@@ -413,7 +431,7 @@ header p {
 .meals:hover {
   padding-right: 7rem;
 }
-.meals:hover .cross {
+.meals:hover .check {
   opacity: 1;
   transform: translate(-50px);
 }
@@ -429,9 +447,11 @@ header p {
   margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 15px;
+  font-weight: 300;
 }
 
-.cross {
+.check {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -446,7 +466,7 @@ header p {
   opacity: 0;
   transition: transform 330ms ease-in-out;
 }
-.cross .fa-check-circle {
+.check .fa-check-circle {
   color: #fff;
   transition: transform 500ms ease-in-out;
 }
