--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -10,62 +10,67 @@
 }
 
 .loader {
-  color: red;
-  display:flex;
-  width:100%;
-  height:100%;
-  margin:0;
-  padding:0;
-  justify-content: center;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.90);
+  animation: loader 0.01s;
+  animation-delay: 1.75s;
+  animation-fill-mode: both;
+  z-index: 10000;
+  display: flex;
   align-items: center;
-  position :fixed;
-  animation-fill-mode: forwards;
-}
+  justify-content: center;
 
-.loader div {
-  animation: lds-spinner 1.2s linear;
-  animation-fill-mode: backwards;
-  animation-iteration-count: 1;
-}
+  &_item {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 1rem;
+    animation: jump 1s;
+    animation-iteration-count: 1;
 
-.loader div:after {
-  content: " ";
-  display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border-radius: 50%;
-  border: 6px solid #fff;
-  border-color: red transparent blue transparent;
-  animation: lds-spinner 1.2s linear infinite;
-}
+    &Container {
+      display: flex;
+      width: 5rem;
+      justify-content: space-between;
+    }
 
+    &_1 {
+      background-color: $color-primary;
+    }
 
-@keyframes lds-spinner {
-  0% {
-    opacity: 1;
-    transform: rotate(0deg);
+    &_2 {
+      background-color: $color-secondary;
+      animation-delay: 0.25s;
+    }
 
+    &_3 {
+      background-color: $color-tertiary;
+      animation-delay: 0.5s;
+    }
   }
+}
+
+@keyframes loader {
   100% {
     opacity: 0;
-    transform: rotate(360deg);
+    z-index: -10;
   }
 }
 
-header, main, footer {
-  opacity: 0;
-  animation: corps 1s;
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes corps {
+@keyframes jump {
   0% {
-    opacity: 0;
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0.5rem);
+  }
+  75% {
+    transform: translateY(-0.5rem);
   }
   100% {
-    opacity: 1;
+    transform: translateY(0);
   }
 }
-
