--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,16 +3,18 @@ body, html {
   font-family: 'Roboto', sans-serif;
 }
 
-
 h1 {
   font-size: 20px;
 }
 
 h2 {
- font-size: 20px;
+  font-size: 20px;
 }
 
 h3 {
   padding: 1rem;
 }
 
+h4 {
+  font-weight: 600;
+}
