--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -4,12 +4,13 @@
   background-color: white;
 
   .arrow {
-    font-size: 20px;
-    margin: 1rem;
-
+    font-size: 17px;
+    margin: 20px;
+    position: absolute;
+    left: 10px;
   }
 
-  :visited{
+  :visited {
     color: black;
   }
 }
@@ -49,7 +50,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 0 1rem;
   margin: 10px;
 }
 
@@ -65,17 +66,23 @@
 .full_menu {
   display: grid;
 
-  @media (min-width:64rem) {
-    grid-template-columns: repeat(3,1fr);
+  @media (min-width: 64rem) {
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
   }
+}
+
+.submenu {
+  max-width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
 }
 
 
 .meals {
   background-color: #fff;
   border-radius: 15px;
-  margin: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   box-shadow: 4px 4px 6px #aaa;
   position: relative;
@@ -87,7 +94,7 @@
     padding-right: 7rem;
   }
 
-  &:hover .cross {
+  &:hover .check {
     opacity: 1;
     transform: translate(-50px);
   }
@@ -105,10 +112,12 @@
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-size: 15px;
+    font-weight: 300;
   }
 }
 
-.cross {
+.check {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,7 +127,6 @@
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   position: absolute;
-  // padding: 20px;
   right: -50px;
   top: 0;
   opacity: 0;
