Fix semantic syntax for W3c validator

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,17 +4,16 @@ body, html {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 18px;
+  padding: 1rem
 }
 
 h3 {
-  padding: 1rem;
-}
-
-h4 {
+  font-size: 15px;
   font-weight: 600;
 }
+
