--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -22,6 +22,10 @@
   padding-bottom: 3rem;
 }
 
+.main_index h2 {
+  padding: 0;
+}
+
 .tuto {
   margin: 20px;
   padding-top: 15px;
@@ -88,6 +92,6 @@
 }
 
 .restaurants .container {
-  margin: 20px;
-
+  margin: 20px 20px 0 20px;
+  padding-bottom: 40px;
 }
