--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,10 @@
   padding-bottom: 3rem;
 }
 
+.main_index h2 {
+  padding: 0;
+}
+
 .tuto {
   margin: 20px;
   padding-top: 15px;
@@ -149,7 +153,8 @@
 }
 
 .restaurants .container {
-  margin: 20px;
+  margin: 20px 20px 0 20px;
+  padding-bottom: 40px;
 }
 
 body, html {
@@ -158,18 +163,16 @@ body, html {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 h2 {
-  font-size: 20px;
-}
-
-h3 {
+  font-size: 18px;
   padding: 1rem;
 }
 
-h4 {
+h3 {
+  font-size: 15px;
   font-weight: 600;
 }
 
@@ -369,6 +372,9 @@ header p {
   position: relative;
   margin-top: -50px;
 }
+.main_menu .card_like {
+  cursor: pointer;
+}
 
 .starter {
   animation: menuAppearance 1s ease-in-out;
@@ -398,7 +404,7 @@ header p {
   width: 10%;
   margin-left: 1rem;
   position: relative;
-  bottom: 2rem;
+  bottom: 1rem;
 }
 
 .full_menu {
