--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -30,6 +30,10 @@
   width: 100%;
   position: relative;
   margin-top: -50px;
+
+  .card_like {
+    cursor: pointer;
+  }
 }
 
 .starter {
@@ -60,7 +64,7 @@
   width: 10%;
   margin-left: 1rem;
   position: relative;
-  bottom: 2rem;
+  bottom: 1rem;
 }
 
 .full_menu {
